@@ -3,9 +3,7 @@ package org.lxdproject.lxd.member.service;
 import lombok.RequiredArgsConstructor;
 import org.lxdproject.lxd.apiPayload.code.exception.handler.FriendHandler;
 import org.lxdproject.lxd.apiPayload.code.status.ErrorStatus;
-import org.lxdproject.lxd.diary.dto.MyDiarySummaryResponseDTO;
-import org.lxdproject.lxd.diary.entity.Diary;
-import org.lxdproject.lxd.diary.repository.DiaryRepository;
+
 import org.lxdproject.lxd.member.dto.*;
 import org.lxdproject.lxd.member.entity.FriendRequest;
 import org.lxdproject.lxd.member.entity.Member;
@@ -16,9 +14,6 @@ import org.lxdproject.lxd.member.repository.MemberRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static org.lxdproject.lxd.diary.util.DiaryUtil.generateContentPreview;
 
 @Service
 @RequiredArgsConstructor
@@ -29,14 +24,22 @@ public class FriendService {
     private final FriendRequestRepository friendRequestRepository;
 
     public FriendListResponseDTO getFriendList(Long memberId) {
+        Member member = findMemberById(memberId);
 
-        List<Member> friends = friendRepository.findFriendsByMemberId(memberId);
+        List<Member> friends = getFriends(memberId);
+        int totalFriends = friends.size();
+
+        int totalRequests = getSentRequestCount(member) + getReceivedRequestCount(member);
 
         List<FriendResponseDTO> friendDtos = friends.stream()
-                .map(friend -> new FriendResponseDTO(friend.getId(), friend.getUsername(), friend.getNickname(), friend.getProfileImg()))
-                .collect(Collectors.toList());
+                .map(friend -> new FriendResponseDTO(
+                        friend.getId(),
+                        friend.getUsername(),
+                        friend.getNickname(),
+                        friend.getProfileImg()))
+                .toList();
 
-        return new FriendListResponseDTO(friendDtos.size(), friendDtos);
+        return new FriendListResponseDTO(totalFriends, totalRequests, friendDtos);
     }
 
     public void sendFriendRequest(Long requesterId, FriendRequestCreateRequestDTO requestDto) {
@@ -116,24 +119,59 @@ public class FriendService {
     }
 
     public FriendRequestListResponseDTO getPendingFriendRequests(Long memberId) {
-        Member currentMember = memberRepository.findById(memberId)
-                .orElseThrow(() -> new FriendHandler(ErrorStatus.MEMBER_NOT_FOUND));
+        Member currentMember = findMemberById(memberId);
 
         List<FriendRequest> sent = friendRequestRepository.findByRequesterAndStatus(currentMember, FriendRequestStatus.PENDING);
         List<FriendRequest> received = friendRequestRepository.findByReceiverAndStatus(currentMember, FriendRequestStatus.PENDING);
 
+        int sentCount = sent.size();
+        int receivedCount = received.size();
+        int totalFriends = getFriends(memberId).size();
+
         List<FriendResponseDTO> sentDtos = sent.stream()
-                .map(req -> {
-                    Member target = req.getReceiver();
-                    return new FriendResponseDTO(target.getId(), target.getUsername(), target.getNickname(), target.getProfileImg());
-                }).toList();
+                .map(req -> mapToDto(req.getReceiver()))
+                .toList();
 
         List<FriendResponseDTO> receivedDtos = received.stream()
-                .map(req -> {
-                    Member target = req.getRequester();
-                    return new FriendResponseDTO(target.getId(), target.getUsername(), target.getNickname(), target.getProfileImg());
-                }).toList();
+                .map(req -> mapToDto(req.getRequester()))
+                .toList();
 
-        return new FriendRequestListResponseDTO(sentDtos.size(), receivedDtos.size(), sentDtos, receivedDtos);
+        return new FriendRequestListResponseDTO(
+                sentCount,
+                receivedCount,
+                totalFriends,
+                sentDtos,
+                receivedDtos
+        );
+    }
+
+    private Member findMemberById(Long id) {
+        return memberRepository.findById(id)
+                .orElseThrow(() -> new FriendHandler(ErrorStatus.MEMBER_NOT_FOUND));
+    }
+
+    private List<Member> getFriends(Long memberId) {
+        return friendRepository.findFriendsByMemberId(memberId);
+    }
+
+    private int getSentRequestCount(Member member) {
+        return friendRequestRepository
+                .findByRequesterAndStatus(member, FriendRequestStatus.PENDING)
+                .size();
+    }
+
+    private int getReceivedRequestCount(Member member) {
+        return friendRequestRepository
+                .findByReceiverAndStatus(member, FriendRequestStatus.PENDING)
+                .size();
+    }
+
+    private FriendResponseDTO mapToDto(Member member) {
+        return new FriendResponseDTO(
+                member.getId(),
+                member.getUsername(),
+                member.getNickname(),
+                member.getProfileImg()
+        );
     }
 }
